<resources>
    <string name="app_name">project_joraid</string>
    <string name="login">Login</string>
    <string name="user_name">User Name</string>
    <string name="password">Password</string>
    <string name="keep_me_logged_in">Keep me logged in</string>
    <string name="hello">Hello,</string>
    <string name="please_select_an_option">Please select an option</string>
    <string name="enter_a_new_record">Enter a new record</string>
    <string name="display_previous_records">Display previous records</string>
    <string name="log_out">Log out</string>
    <string name="submit">Submit</string>
    <string name="adnan_joraid_991581388">Adnan Joraid - 991581388</string>
    <string name="new_record">New Record</string>
    <string name="student_id">Student ID</string>
    <string name="score">Score</string>
    <string name="_11">10</string>
    <string name="_5">5</string>
    <string name="_0">0</string>
    <string name="comments">Comments</string>
    <string name="save_record">Save Record</string>
    <string name="back">Back</string>
    <string name="all_records">All Records</string>
    <string name="id">ID</string>
    <string name="scoreVal">Score</string>
    <string name="comment">Comment</string>
    <string name="main_page">main page</string>
    <string name="_345">345</string>
    <string name="_10">10</string>
    <string name="very_good">Very Good</string>
    <string name="edit_record">Edit Record</string>
    <string name="student_id_update">Student ID:</string>
    <string name="score_update">Score</string>
    <string name="enter_score">Enter Score</string>
    <string name="enter_comment">Enter Comment</string>
    <string name="cancel">Cancel</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="update">update</string>
</resources>